; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/otg/extr_isp1301_omap.c_isp1301_clear_latch.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/otg/extr_isp1301_omap.c_isp1301_clear_latch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.isp1301 = type { i32 }

@ISP1301_INTERRUPT_LATCH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.isp1301*)* @isp1301_clear_latch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @isp1301_clear_latch(%struct.isp1301* %0) #0 {
  %2 = alloca %struct.isp1301*, align 8
  %3 = alloca i32, align 4
  store %struct.isp1301* %0, %struct.isp1301** %2, align 8
  %4 = load %struct.isp1301*, %struct.isp1301** %2, align 8
  %5 = load i32, i32* @ISP1301_INTERRUPT_LATCH, align 4
  %6 = call i32 @isp1301_get_u8(%struct.isp1301* %4, i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load %struct.isp1301*, %struct.isp1301** %2, align 8
  %8 = load i32, i32* @ISP1301_INTERRUPT_LATCH, align 4
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @isp1301_clear_bits(%struct.isp1301* %7, i32 %8, i32 %9)
  %11 = load i32, i32* %3, align 4
  ret i32 %11
}

declare dso_local i32 @isp1301_get_u8(%struct.isp1301*, i32) #1

declare dso_local i32 @isp1301_clear_bits(%struct.isp1301*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
